force-app/main/default/objects/Project__c/fields/Date_Anticipe_Recolte__c.field-meta.xml
<CustomField>
    <fullName>Date_Anticipe_Recolte__c</fullName>
    <label>Date Anticipe Recolte</label>
    <type>Date</type>
</CustomField>