force-app/main/default/objects/Project__c/fields/Etape_en_Cours__c.field-meta.xml
<CustomField>
    <fullName>Etape_en_Cours__c</fullName>
    <formula>IF(AND(Date_De_Semis__c &lt;= TODAY(), NOT(ISPICKVAL(Etat__c, &quot;Etude&quot;))), IF(AND(NOT(ISPICKVAL(Etat__c, &quot;Terminé&quot;)), NOT(ISPICKVAL(Etat__c, &quot;Annulé&quot;))), FLOOR((( TODAY() - Date_De_Semis__c )/ Plant__r.Periodicite_Jours__c )+1), null), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etape en Cours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>