force-app/main/default/objects/Project__c/fields/Etat__c.field-meta.xml
<CustomField>
    <fullName>Etat__c</fullName>
    <label>Etat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Etude</fullName>
                <default>true</default>
                <label>Etude</label>
            </value>
            <value>
                <fullName>Bank</fullName>
                <label>Banque</label>
            </value>
            <value>
                <fullName>Encours</fullName>
                <label>En cours</label>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>