force-app/main/default/objects/Project__c/fields/isUpdate__c.field-meta.xml
<CustomField>
    <fullName>isUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUpdate</label>
    <type>Checkbox</type>
</CustomField>