force-app/main/default/objects/Project__c/fields/Localisation__c.field-meta.xml
<CustomField>
    <fullName>Localisation__c</fullName>
    <label>Localisation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>