force-app/main/default/objects/Project__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <length>80</length>
    <type>Text</type>
</CustomField>