force-app/main/default/objects/Project__c/fields/Printed_Reference__c.field-meta.xml
<CustomField>
    <fullName>Printed_Reference__c</fullName>
    <formula>RIGHT(  TEXT( YEAR(  DATEVALUE(CreatedDate) )) , 2)  +  RIGHT( &apos;0&apos;+  TEXT(MONTH(DATEVALUE(CreatedDate)))    , 2)  +  RIGHT( &apos;0&apos;+   TEXT(DAY(DATEVALUE(CreatedDate)))      , 2)  +  Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Printed Reference</label>
    <type>Text</type>
</CustomField>