force-app/main/default/objects/Project__c/fields/Superficy__c.field-meta.xml
<CustomField>
    <fullName>Superficy__c</fullName>
    <label>Superficy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>