force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Farmer__c</columns>
    <columns>Plant__c</columns>
    <columns>Pays__c</columns>
    <columns>Region__c</columns>
    <columns>Etape_en_Cours__c</columns>
    <columns>isUpdate__c</columns>
    <columns>Date_Recolte__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>