force-app/main/default/objects/Project__c/listViews/ProjectNotUpdated.listView-meta.xml
<ListView>
    <fullName>ProjectNotUpdated</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isUpdate__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>ProjectNotUpdated</label>
</ListView>