force-app/main/default/objects/Project__c/listViews/Updated_project.listView-meta.xml
<ListView>
    <fullName>Updated_project</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isUpdate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Updated project</label>
</ListView>